--- a/taskManagement/projects/templates/Projects/projects.html
+++ b/taskManagement/projects/templates/Projects/projects.html
@@ -16,6 +16,7 @@
         <td>{{user.firstName}}</td>
         <td>{{user.lastName}}</td>
         <td><a href="{% url 'update-user' user.id %}">update</a></td>
+        <td><a href="{% url 'delete-user' user.id %}">delete</a></td>
     </tr>
     {% endfor %} 
 </table>
@@ -42,6 +43,7 @@
         <td>{{task.owner}}</td>
 
         <td><a href="{% url 'update-task' task.id %}">update</a></td>
+        <td><a href="{% url 'delete-task' task.id %}">delete</a></td>
     </tr>
     {% endfor %} 
 </table>
